# TigerCI

./: .gitmodules  LICENSE  README.md
documentation/: manual.tex
scripts/LOVO/: LOVO_prep.py  LOVO_prep3.py
tests/: README  regression_tester  standard_dev.sh  vis-benchmarks.py
tests/Tests/Acetone_LSDCI/: Acetone_LSDCI.molden  Acetone_LSDCI.output  driver.sh
tests/Tests/Acetone_LSDCI_CD_TEST/: Acetone_LSDCI.output  driver.sh
tests/Tests/Acetone_LSDCI_DF/: Acetone_LSDCI_DF.output  driver.sh
tests/Tests/Acetone_LSDCI_LOW_MEM/: Acetone_LSDCI_LOW_MEM.output  driver.sh
tests/Tests/Acetone_SDCI_EXP_BASIS_SPH/: Acetone_SDCI_EXP_BASIS.molden  Acetone_SDCI_EXP_BASIS.output  Acetone_SDCI_EXP_BASIS.spherical.molden  Acetone_SDCI_EXP_BASIS.spherical.output  driver.sh
tests/Tests/Acetylene_SuperMol/: Acetylene_SuperMol.output  driver.sh
tests/Tests/Acetylene_SuperMol_MRACPF2/: Acetylene_SuperMol_MRACPF2.molden  Acetylene_SuperMol_MRACPF2.output  driver.sh
tests/Tests/Ammonia_SDCI/: Ammonia_SDCI.molden  Ammonia_SDCI.output  driver.sh
tests/Tests/Ethylene_HighSpin/: Ethylene_HighSpin.molden  Ethylene_HighSpin.output  driver.sh
tests/Tests/HN2O_HighSpin/: HN2O_HighSpin.molden  driver.sh
tests/Tests/Helium2_ACPF/: Helium2_ACPF.output  driver.sh
tests/Tests/Helium2_SDCI/: Helium2_SDCI.molden  Helium2_SDCI.output  driver.sh
tests/Tests/Helium2_SDCI_excited/: Helium2_SDCI_excited.output  driver.sh  error-check.py
tests/Tests/Methane_LSDCI/: Methane_LSDCI.molden  Methane_LSDCI.output  driver.sh
tests/Tests/Methane_SDCI/: Methane_SDCI.molden  Methane_SDCI.output  driver.sh  methane.sh
tests/Tests/Methane_SDCI_LOWBUFF/: Methane_SDCI.molden  Methane_SDCI.output  driver.sh
tests/Tests/Methylenes_HighSpin/: Methylenes_HighSpin.molden  driver.sh
tests/Tests/methanol-equ-MRACPF/: driver.sh  error-check.py  methanol.input  methanol.molden  methanol.output
tests/Tests/methanol-equ-ref-test/: driver.sh  methanol.input  methanol.output
tests/Tests/methanol-super-MRACPF/: driver.sh  methanol.input  methanol.molden  methanol.output
tests/Tests/methanol-super-ref-test/: driver.sh  error-check.py  methanol.input  methanol.output
tiger_ci/: CMakeLists.txt  DoxyConfig  IO_buffer.f90
tiger_ci/cmake-modules/: FindGSL.cmake  Findlibint.cmake
tiger_ci/erkale/: CMakeLists.txt  README  basislibrary.cpp  custom_basis_library.h.in  density_fitting.h  eriscreen.cpp  eriworker.cpp  eriworker_gentransform.cpp  module.mk  scf.h  settings.cpp  settings.h
tiger_ci/erkale/basis/: aug-cc-pV5Z-RI.gbs  aug-cc-pVDZ-RI.gbs  aug-cc-pVQZ-RI.gbs  aug-cc-pVTZ-RI.gbs  cc-pV5Z-RI.gbs  cc-pVDZ-RI.gbs  cc-pVQZ-RI.gbs  cc-pVTZ-RI.gbs  cc-pwCV5Z.gbs  d-aug-cc-pV5Z.gbs  d-aug-cc-pV6Z.gbs  d-aug-cc-pVDZ.gbs  d-aug-cc-pVQZ.gbs  d-aug-cc-pVTZ.gbs
tiger_ci/tiger_cpp/: BasisData.cpp  BasisData.h  CMakeLists.txt  Cholesky.cpp  Cholesky.h  CholeskyUtils.cpp  CholeskyUtils.h  CholeskyVectorWriter.cpp  CholeskyVectorWriter.h  ConvertKeys.cpp  ConvertKeys.h  Cylinder.cpp  Cylinder.h  DensityFitting.cpp  DensityFitting.h  EmbeddingData.cpp  EmbeddingData.h  ErkaleDF.cpp  ErkaleDF.h  ErkaleData.cpp  ErkaleData.h  ErkaleIntegral.cpp  ErkaleIntegral.h  FunctionMap.cpp  FunctionMap.h  InputReader.cpp  InputReader.h  IntegralScreen.cpp  IntegralScreen.h  Keyword.cpp  Keyword.h  Lapack_Defs.h  MemUtils.h  OrbitalParsers.cpp  OrbitalParsers.h  PairIndex.cpp  PairIndex.h  PairIndexWriter.cpp  PairIndexWriter.h  PipekMezey.cpp  (+16 more)
tiger_ci/tiger_fortran/: CMakeLists.txt  abcd_seg_info_replacement.f90  allowed_virtuals_mod.f90  aposteriori.f90  arraylist_integer.f90  blocked_locks.f90  c_io_finterface.f90  c_sort_finterface.f90  cholesky_decomposition.f90  cholesky_driver.f90  cholesky_out_of_core.f90  cholesky_structs.f90  cholesky_transform.f90  ci_utilities_mod.f90  davidson.f90  davidson_io.f90  davidson_restart.f90  decider.f90  decider_symbols.f90  density_fitting_interface.f90  diag_element_mod_2.f90  diagtimesc.f90  driver_acpf.f90  driver_sdci.f90  fetch_globals.f90  find_references.f90  fortran_timing.f90  function_map.f90  get_basis_data.f90  get_cylinder_data.f90  get_integrals.f90  get_integrals_mod.f90  global_var_mod.f90  graph_mod.f90  graph_var_mod.f90  gtimesc.f90  hamiltonian_utils.f90  htimesc.f90  iabc_seg_info_replacement.f90  initial_davidson_guess.f90  (+51 more)
